# off_the_shelf_llm

./: RAG.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: RAG-checkpoint.ipynb
src/off_shelf_llm/: __init__.py
