[project]
name = "off-shelf-llm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Aksel Rasmussen", email = "aksel@hybridgreentech.com" }
]
dependencies = [
    "llama-index-core>=0.12.16.post1",
    "llama-index-readers-file>=0.4.4",
    "llama-index-llms-ollama>=0.5.1",
    "llama-index-embeddings-huggingface>=0.5.1",
    "jupyter>=1.1.1",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "python-pptx>=1.0.2",
    "pillow>=11.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/off_shelf_llm"]
